# bazel-gazelle-1219-repro

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
repro/: BUILD.bazel  bar.proto  foo.proto
