load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "bar_proto",
    srcs = ["bar.proto"],
    visibility = ["//visibility:public"],
    deps = [":foo_proto"],
)

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "bar_go_proto",
    importpath = "github.com/nickgooding/bazel-gazelle-1219-repro/bar",
    proto = ":bar_proto",
    visibility = ["//visibility:public"],
    deps = [":foo_go_proto"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "github.com/nickgooding/bazel-gazelle-1219-repro/foo",
    proto = ":foo_proto",
    visibility = ["//visibility:public"],
)
